[gd_scene format=3 uid="uid://pdcicn3rbwbs"]

[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/sprouty_dialogs/editor/theme/sprouty_dialogs_theme.tres" id="1_r0mi1"]
[ext_resource type="PackedScene" uid="uid://bk5rchg4mt0js" path="res://addons/sprouty_dialogs/editor/modules/settings/translation_settings.tscn" id="2_g62sc"]
[ext_resource type="Script" uid="uid://cmlad7vuvr5on" path="res://addons/sprouty_dialogs/editor/modules/settings/scripts/settings_panel.gd" id="2_yfqmm"]
[ext_resource type="PackedScene" uid="uid://bbabgt3yvpmw5" path="res://addons/sprouty_dialogs/editor/modules/settings/general_settings.tscn" id="3_mtbo4"]
[ext_resource type="PackedScene" uid="uid://ryk2rxuf4sbx" path="res://addons/sprouty_dialogs/editor/modules/settings/text_settings.tscn" id="4_mtbo4"]

[node name="SettingsPanel" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r0mi1")
current_tab = 0
script = ExtResource("2_yfqmm")

[node name="General" type="TabBar" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="GeneralSettings" parent="General" instance=ExtResource("3_mtbo4")]
unique_name_in_owner = true
layout_mode = 1

[node name="Text" type="TabBar" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TextSettings" parent="Text" instance=ExtResource("4_mtbo4")]
unique_name_in_owner = true
layout_mode = 1

[node name="Translation" type="TabBar" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="TranslationSettings" parent="Translation" instance=ExtResource("2_g62sc")]
unique_name_in_owner = true
layout_mode = 1
